Fix WebVR does not properly stop presenting if requestPresent rejects.

Directly call forceExitPresent won't stop
presenting correctly.

BUG=680209

Review-Url: https://codereview.chromium.org/2689563008
Cr-Commit-Position: refs/heads/master@{#451544}