third_party/WebKit/Source/modules/vr/VRDisplay.h
@@ -123,6 +123,8 @@ class VRDisplay final : public EventTargetWithInlineData,
   void onConnected();
   void onDisconnected();
 
+  void stopPresenting();
+
   void OnPresentChange();
 
   // VRDisplayClient
